--- a/gb/20/8/25/n12356888.md
+++ b/gb/20/8/25/n12356888.md
@@ -1,13 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vebhse3774/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vebhse3774/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vebhse3774/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vebhse3774/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vebhse3774/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【欺世大观】汉奸毛泽东：秘密结盟 卖国求生</h2>
-<a href="https://git.io/JUqxZ"><img width="600" src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/vebhse3774/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d3l8osd9w9ntl9.cloudfront.net/Y3g5bFcjs"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2020年08月31日讯】各位看官，为了纪念75年前中国人民苦战8年，抗击日本侵略者取得的最大胜利，我们一方面缅怀惨烈牺牲的中华英烈和无辜同胞，另外想以史实掀掉中共自己贴到脸上的金箔，即所谓它才是“领导全民族抗战的中流砥柱”。今天这集，让我们最终揭开中共邪教和教主<ahref="https://github.com/vebhse3774/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>当年与日寇暗通款曲、苟且偷生、掣肘国军的卖国秘闻。</p>
-<p>据中共自己承认，<ahref="https://github.com/vebhse3774/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>、周恩来曾至少六次感谢日军侵华，并且还放弃了战后对日本的巨额战争追偿。为严谨起见，本片将中共官宣记载的史实秀给各位看官验证。下面是6+1次感谢日本侵略的记载。</p>
-<p><center><a src=""></a><a href="https://git.io/JUqxZ"><img width="600" src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/vebhse3774/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/G9iM1HruOK8" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></p>
+	<p>【大纪元2020年08月31日讯】各位看官，为了纪念75年前中国人民苦战8年，抗击日本侵略者取得的最大胜利，我们一方面缅怀惨烈牺牲的中华英烈和无辜同胞，另外想以史实掀掉中共自己贴到脸上的金箔，即所谓它才是“领导全民族抗战的中流砥柱”。今天这集，让我们最终揭开中共邪教和教主<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>当年与日寇暗通款曲、苟且偷生、掣肘国军的卖国秘闻。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow: hidden;"><a style="width: 100%; height: 170px;" src="https://player.captivate.fm/episode/fff895c8-f271-453f-9fa4-e39aa6055474" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多新闻请至<ahref="https://github.com/hxcaik307/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
+<p>据中共自己承认，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>、周恩来曾至少六次感谢日军侵华，并且还放弃了战后对日本的巨额战争追偿。为严谨起见，本片将中共官宣记载的史实秀给各位看官验证。下面是6+1次感谢日本侵略的记载。</p>
+<p><center><a src=""></a><a href="https://d3l8osd9w9ntl9.cloudfront.net/Y3g5bFcjs"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/G9iM1HruOK8" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></p>
 <h2>毛泽东、周恩来曾至少六次感谢日军侵华</h2>
 <p>一、1956年，日军中将远藤三郎受邀访华，受到毛泽东亲切接见。毛对他说：“你们也是我们的先生，我们要感谢你们。真是你们打了这一仗，教育了中国人民，把一盘散沙的中国人民打得团结起来了，所以，我们应该感谢你们。”（大陆经济日报出版社1998年王俊彦&#33879;《大外交家周恩来》）</p>
 <p>二、1960年6月21日，毛泽东对来访的日本文学代表团与左派作家野间宏等人说：“我同很多日本朋友讲过这段事情，其中一部分人说日本侵略中国不好，我说侵略当然不好，但不能单看这坏的一面，另一面日本帮了我们中国的大忙。假如日本不占领大半个中国，中国人民不会觉醒起来。在这一点上，我们要感谢日本皇军。”（中央文献出版社丶世界知识出版社1995年版《毛泽东外交文选》）</p>
@@ -27,10 +30,10 @@
 <h3>夹击国民政府和国军 中共遭汪精卫拒绝</h3>
 <p>接到斯大林命令后，中共保卫部长李克农派人到苏北新四军驻地传达中央指示，命令新四军政委饶漱石、情报部长杨帆和中央宣传部长兼长江局情报部长潘汉年具体执行。当时还接到中共中央的电令。因为事关重大，饶、杨、潘三人不敢冒然行事，当即决定潘汉年还是去延安当面请示毛，并要求中央给予正式文件。1943年潘携带中共中央正式文件返回新四军，开始着手和冈村宁次以及南京汪伪政权谈判缔约。</p>
 <p>不久饶、杨、潘到达南京，先去找了汪精卫，却遭到了汪的一口拒绝。深谙共产党邪恶本性的汪精卫说：“在上海、广东、武汉，我和共产党头目们打了好几十年交道了，共产党这个葫芦里所卖的药是何其剧毒，我是很清楚的，无论如何共产党这个贼船，我是不能再上了。何况我之所以脱离重庆走曲线救国的道路，就是为了消灭赤祸，共产党无论走到哪里，就把饥荒、内战、烧杀、愚昧、落后带到哪里。我的左膀右臂陈公博和周佛海两位先生不都是中共十二人成立大会上的成员吗！”</p>
-<p>这样看，汪精卫虽然投降了日本人，失了中国人的气节，被骂作大<ahref="https://github.com/vebhse3774/djy/blob/master/gb/tag/%E6%B1%89%E5%A5%B8.md#1">汉奸</a>，但他对共产党的认识，甚至比现在的糊涂人还明白些。话点到为止，谁有兴趣，可以自行google。</p>
+<p>这样看，汪精卫虽然投降了日本人，失了中国人的气节，被骂作大<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%89%E5%A5%B8.md#1">汉奸</a>，但他对共产党的认识，甚至比现在的糊涂人还明白些。话点到为止，谁有兴趣，可以自行google。</p>
 <h3>直接拜会日军侵华部队总司令冈村宁次</h3>
 <p>中共代表被汪精卫拒绝后，居然直接去拜会了日军侵华部队总司令冈村宁次。几次谈判后，饶漱石和杨帆返回苏北驻地，留下潘汉年工作组，继续和日军完成谈判缔约的工作。</p>
-<p>后来中共建政，毛泽东为了掩盖这段见不得人的历史，首先把高岗以及与其从无瓜葛的华东人民政府主席、上海市委书记、中共中央组织部长饶漱石，打成高饶反党联盟，监禁起来，饶后来被关死在狱中；毛继而又将华东人民政府公安部长、上海市公安局长杨帆和上海市委书记副市长潘汉年打成反革命，内部传达定性为“<ahref="https://github.com/vebhse3774/djy/blob/master/gb/tag/%E6%B1%89%E5%A5%B8.md#1">汉奸</a>”，然后逮捕长期监禁。</p>
+<p>后来中共建政，毛泽东为了掩盖这段见不得人的历史，首先把高岗以及与其从无瓜葛的华东人民政府主席、上海市委书记、中共中央组织部长饶漱石，打成高饶反党联盟，监禁起来，饶后来被关死在狱中；毛继而又将华东人民政府公安部长、上海市公安局长杨帆和上海市委书记副市长潘汉年打成反革命，内部传达定性为“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%89%E5%A5%B8.md#1">汉奸</a>”，然后逮捕长期监禁。</p>
 <p>莫斯科驻延安的特派员弗拉基米洛夫在其日记中也证实了中共勾结日军的行径。他这样写道：“我无意中看到一份新四军总部的来电。这份总部的报告完全清楚地证实了：中共领导与日本派遣军最高司令部之间，长期保存着联系……电报无疑还表明与日军司令部联系的有关报告，是定期送到延安来的。”因为，“叶剑英告诉了毛泽东，我已经知道了新四军发来的电报内容。中共中央主席跟我解释了很久，说明共产党领导人为什么决定与日本占领军司令部建立联系。”“中共领导人中只有几个人知道此事，毛的一个代理人，可以说一直隶属于南京的冈村宁次大将总部的，什么时候需要，他都可以在日本反间谍机构的严密保护下，畅通无阻地往返于南京与新四军总部之间。”然而，“中共领导人却要做出打日本的样子，欺骗莫斯科。”</p>
 <p>中国大陆出版的《南京志史》也披露了一则抗战后期，中共背着国民政府和四万万浴血抗战的同胞，私下里透过秘密渠道，与日本最高军政总部议和。该书披露：1945年6月，设在南京的日本中国派遣军总司令部来了一位神秘人物，此君自报家门：我是新四军联络部长杨帆。卫兵们大惊失色，紧急通报上去，军部的长官连忙出迎，殷勤接待……抗战史上的一篇黑幕故事从此开始。</p>
 <p>事情经过是这样的，太平洋战争的爆发，使日本陷于战线过长的困境。在中国战场上也遭遇国军顽强抵抗。为了挽救这种极其被动的局面，冈村宁次向新四军军部发出议和信息……新四军接到后，因事关重大，便由中共华东局请示中央。而延安方面反应奇快，密电答复：可以和日方秘密接触。6月初，日军派出使团，以日王的干儿子、日军总司令部参谋部对中共工作组组长为首，向中共提出局部和平的方案，并建议中共方面派出负责官员前往南京与日军总部首脑直接谈判。经中共中央驰电批复，我们就看到了前面的场面，新四军联络部长杨帆去南京拜会日军。</p>
@@ -38,49 +41,48 @@
 <p>于是，中共一面是人、一面是鬼的丑恶嘴脸再次暴露无遗。难怪这位共产国际的特派员气愤地指责：“毛泽东在侵略者面前向后退缩，却乘中央政府和日军冲突之际为自己渔利。</p>
 <p>“在民族遭受灾难、人民备尝艰辛并作出了不可估价牺牲的时刻，在国家受制于法西斯分子的时刻，采取这种策略，岂止是背信弃义而已……什么国际主义政策，跟毛泽东哪能谈得通，连他自己的人民也只不过是他在权力斗争中的工具罢了！千百万人的流血和痛苦，灾难和忧伤，对他来说，只是一种抽象的概念。”</p>
 <p>各位看官，汉奸毛泽东的故事讲完了。时至今日，中共哪天忘记过“人民是其权力斗争中的工具”吗？从来没有。为了一己私利，中共做什么都可以不择手段，不是吗？这也就毫不奇怪老毛为什么要三番五次感谢“日本皇军的入侵”了。</p>
-<p>《欺世大观》节目制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/【欺世大观】.md#1">欺世大观</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/10/10/29/n3068961.md#1">抗战历史真相：毛泽东为何感谢日本侵华</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/11/3/20/n3203137.md#1">毛泽东被大陆媒体曝光“感谢日本侵华”</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/12/9/17/n3685137.md#1">【杨宁】：毛泽东会灭掉日本？</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/12/10/10/n3702159.md#1">【史海】毛泽东对日本“一往情深”的六篇谈话</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/10/29/n3068961.md#1">抗战历史真相：毛泽东为何感谢日本侵华</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/3/20/n3203137.md#1">毛泽东被大陆媒体曝光“感谢日本侵华”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/9/17/n3685137.md#1">【杨宁】：毛泽东会灭掉日本？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/10/10/n3702159.md#1">【史海】毛泽东对日本“一往情深”的六篇谈话</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/21/n9756258.md#1" target="_blank">柬埔寨女儿的记忆：《他们先杀了我父亲》</a></li><li><a href="https://github.com/vebhse3774/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489082.md#1" target="_blank">反迫害20周年 34国法轮功学员伦敦集会</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/1/n10752586.md#1" target="_blank">共产暴政录：毛泽东同学夏曦“肃反”创纪录</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240713.md#1" target="_blank">神灵赐福 巴西一企业稳步发展壮大</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/23/n12352151.md#1">清朝官场惊魂奇闻 原是前世埋下祸根</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/29/n12366370.md#1">【薇羽看世间】FBI解密：来自金星的科学家</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/26/n12358494.md#1">神奇的玛雅金字塔 你拍手它传回鸟叫声</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/10/n12318960.md#1">【命理】什么时候能找到男朋友？</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/31/n12368962.md#1">【直播回顾】台湾捷克经贸投资论坛 捷克参议长致词</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/30/n12368686.md#1">【薇羽看世间】伊万卡在共和党大会上演讲</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/30/n12367808.md#1">【新闻第一现场】姚城：中美首战即打核战</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12364079.md#1">【珍言真语】蔡咏梅：大佛洗脚天下乱 末代征兆</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/29/n12365460.md#1">偷美研究机密逃回国 中共军方学者机场被抓</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/29/n12365540.md#1">川普支持率飙升 加州人赞共和党大会</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12365016.md#1">成龙北京豪宅被拍卖 入住13年突遭查封</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/30/n12368200.md#1">移民进度？黄秋生宣布搬离住香港20年旧居</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/27/n12362661.md#1">福布斯中国名人榜出炉 美籍刘亦菲入选遭质疑</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/30/n12368618.md#1">当妈后首晒女儿动态 唐嫣配文：宝贝的宝贝</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12365345.md#1">台湾馆长遭枪击 杜汶泽看直播喊话：要撑住</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12363545.md#1">不用咖啡机 在家也能冲泡好喝的拿铁咖啡</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/26/n12359734.md#1">组图：宁死也不愿被囚笼 华丽的格查尔鸟</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/25/n12357051.md#1">【罗厨寻味】番茄炒牛肉</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/30/n12367461.md#1">为什么以色列的F-35战机与他国不同？</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12363975.md#1">安倍晋三因溃疡性大肠炎再辞职！4症状是警讯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vebhse3774/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vebhse3774/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/25/n12356888.htm">【欺世大观】汉奸毛泽东：秘密结盟 卖国求生</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/25/n12356888.htm">【欺世大观】汉奸毛泽东：秘密结盟 卖国求生</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/vebhse3774/djy/blob/master/gb/20/8/25/n12356888.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vebhse3774/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vebhse3774/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vebhse3774/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/25/n12356888.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
