--- a/gb/20/9/13/n12401109.md
+++ b/gb/20/9/13/n12401109.md
@@ -1,24 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gmcdso3109/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/gmcdso3109/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gmcdso3109/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gmcdso3109/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gmcdso3109/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【薇羽看世间】一代奸相周恩来（上）</h2>
-<a href="https://git.io/JU8z5"><img width="600" src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/gmcdso3109/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://ddtx9y1vir8bp.cloudfront.net/A5hY8yb7s"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>作为中共国的第一任总理，周恩来出卖的国土已经远远超出中国历史上的任何一位宰相。从这一点来看，称周恩来为一代奸相，一点也不为过。（大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2020年09月14日讯】大家好，这里是《<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E8%96%87%E7%BE%BD%E7%9C%8B%E4%B8%96%E9%97%B4.md#1">薇羽看世间</a>》，我是陈薇羽。</p>
-<p>说起<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E5%91%A8%E6%81%A9%E6%9D%A5.md#1">周恩来</a>，我就想起小时候学的课文“十里长街送总理”。那个时候，觉得周总理太完美了，正人君子，良臣贤相，道德楷模。</p>
-<p>在很多中国大陆人心目中，<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E5%91%A8%E6%81%A9%E6%9D%A5.md#1">周恩来</a>的形象一直被奉若神明，人们对他的敬重甚至超过<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>。但是，周恩来真的这么崇高吗？当真实的历史浮出水面、人们也许会得出完全相反的结论。</p>
-<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://git.io/JU8z5"><img width="600" src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/gmcdso3109/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/iIlzNXMf7DM?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+	<p>【大纪元2020年09月14日讯】大家好，这里是《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%96%87%E7%BE%BD%E7%9C%8B%E4%B8%96%E9%97%B4.md#1">薇羽看世间</a>》，我是陈薇羽。</p>
+<p>说起<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%91%A8%E6%81%A9%E6%9D%A5.md#1">周恩来</a>，我就想起小时候学的课文“十里长街送总理”。那个时候，觉得周总理太完美了，正人君子，良臣贤相，道德楷模。</p>
+<p>在很多中国大陆人心目中，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%91%A8%E6%81%A9%E6%9D%A5.md#1">周恩来</a>的形象一直被奉若神明，人们对他的敬重甚至超过<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>。但是，周恩来真的这么崇高吗？当真实的历史浮出水面、人们也许会得出完全相反的结论。</p>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://ddtx9y1vir8bp.cloudfront.net/A5hY8yb7s"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/iIlzNXMf7DM?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
 	</div>
-<p>周恩来的真实面目鲜为人知，我打算花三期节目的时间来讲他，揭开他伪善的面孔，也让大家了解真实的共产党人。今天我们先来看看周恩来和<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E5%85%89%E7%85%A7%E5%B8%AE.md#1">光照帮</a>，也就是光明会的关系。</p>
+<p>周恩来的真实面目鲜为人知，我打算花三期节目的时间来讲他，揭开他伪善的面孔，也让大家了解真实的共产党人。今天我们先来看看周恩来和<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%89%E7%85%A7%E5%B8%AE.md#1">光照帮</a>，也就是光明会的关系。</p>
 <p>周恩来，1898年出生于江苏淮安，1976年1月因膀胱癌去世。</p>
 <p>周恩来19岁赴日本求学，虽然应考了东京高等师范学校和第一高等学校，但都没有被录取，不得不回到南开大学。</p>
 <p>据中共官员的回忆录记载，在日本期间，周恩来接触了马克思主义，看过一些关于列宁在俄国发动十月政变的报道。他向往列宁式的政变，想要在中华大地上建立一个共产主义政权。</p>
 <p>1920年初，周恩来因参加学运被南开开除，同年底，受南开校父严范孙的捐助，周恩来和李福景出国深造，周恩来去了法国，李福景去了英国。为什么要提李福景，因为里面有一段鲜为人知的事，我们在以后的节目中慢慢说。</p>
-<p>周恩来到了法国后，并没有专注学业，而是全身心投入共产主义运动。1921年3月，周恩来经张申府介绍，加入共产主义小组，随后建立旅法共产主义小组，并参加<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E5%85%89%E7%85%A7%E5%B8%AE.md#1">光照帮</a>的活动，之后成了<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%9B%BD%E9%99%85.md#1">共产国际</a>的秘密特使。</p>
+<p>周恩来到了法国后，并没有专注学业，而是全身心投入共产主义运动。1921年3月，周恩来经张申府介绍，加入共产主义小组，随后建立旅法共产主义小组，并参加<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%89%E7%85%A7%E5%B8%AE.md#1">光照帮</a>的活动，之后成了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%9B%BD%E9%99%85.md#1">共产国际</a>的秘密特使。</p>
 <p>中华民国中国青年党创始人李璜（1895-1991）是国家主义者，反对马列主义和俄国十月革命。当年他也在法国留学，对从事共产主义活动的周恩来多有了解。据他回忆，20年代初，第三国际从莫斯科派代表，通过巴黎的光明会（即光照帮）引诱外国留学生去研究马克思主义和国际共产革命。李璜亲自参加过光明会的活动，发现周恩来几次都在场。</p>
-<p>因为周恩来英文较好，可以直接跟第三国际代表沟通，他在社会主义青年团中的地位变得重要起来。作为中共的一个海外的分支机构，社会主义青年团，它的前身是中国少年共产党，还接受第三国际的资助。周恩来在社会主义青年团接受了<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%9B%BD%E9%99%85.md#1">共产国际</a>的训练，学习如何从事斗争，如何煽动、纠合群众，指定目标，从事打斗、示威等等。</p>
+<p>因为周恩来英文较好，可以直接跟第三国际代表沟通，他在社会主义青年团中的地位变得重要起来。作为中共的一个海外的分支机构，社会主义青年团，它的前身是中国少年共产党，还接受第三国际的资助。周恩来在社会主义青年团接受了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%9B%BD%E9%99%85.md#1">共产国际</a>的训练，学习如何从事斗争，如何煽动、纠合群众，指定目标，从事打斗、示威等等。</p>
 <p>为了检验“培训”成果，社会主义青年团搞了几次运动，如攻打巴黎的中国留法学生会馆、攻打中国驻法公使馆、大闹里昂学生宿舍、大闹国庆宴会等。每次行动中，都少不了周恩来的身影。</p>
 <p>让李璜印象深刻的是，1923年中华民国双十国庆节，600多名爱国人士在巴黎Zataria饭店的大厅召开了国庆纪念会，不料半夜，周恩来带了十多人闯进饭店捣乱，他们高举红旗，大唱国际歌，绕场一周后，呼啸而去。</p>
 <p>1921年10月，在大闹里昂宿舍后，105名中国留学生被遣返回国，包括蔡和森、向警予、李立三、陈毅等大约30名社会主义青年团成员。坐镇巴黎的周恩来却逃过这一劫。</p>
@@ -26,7 +26,7 @@
 <p>1924年，李璜发现周恩来等旅法共产党纷纷回国，预料他们会在国内大搞共产活动，觉得一定要跟踪追击。这样，他也跟着回到了中国。</p>
 <p>1924年1月，国民党第一次全国代表大会在广州召开，孙中山推行“联俄、容共、扶助农工”的政策，主张国民党与共产党合作。26岁的周恩来作为共产国际派驻中国的心腹人选，从法国回国后，很快就任黄埔军校政治部代理主任并很快转正，兼任国民革命军第一军政治部主任，中将军衔。一个在国民党内部毫无功绩的周恩来，何以一回国就被任命这么重要的职务？</p>
 <p>原来，应共产国际的要求，周恩来在1923年就在巴黎以个人身份加入了国民党，摇身一变，成了国民党旅欧支部执行部总务科主任。更重要的是，周恩来1923年从法国途经莫斯科到达广州后，身上揣着一封共产国际的推荐信，收信人是当时苏联派到中国协助孙中山训练军队、建立黄埔军校的鲍罗廷。正是这封推荐信，让周恩来爬上了高位。那时候，周恩来已经是一个听命于共产国际的秘密特使。</p>
-<p>受过苏俄培训并受到赏识的周恩来，在中共党史上的地位一度高于<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>，这也就不难理解了，因为当时的中共完全受莫斯科和共产国际的控制和领导。</p>
+<p>受过苏俄培训并受到赏识的周恩来，在中共党史上的地位一度高于<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>，这也就不难理解了，因为当时的中共完全受莫斯科和共产国际的控制和领导。</p>
 <p>香港《开放》杂志曾经披露，有人认真研究过周恩来的早期履历后认为，周恩来出道时是共产国际的秘密特工，由共产国际派回中国。从目前披露出来的史料，我们基本可以判断，周恩来参加了光照帮，听命于共产国际，受控于斯大林。周恩来加入国民党，其实是渗透到国民党内，借机发展共产党，颠覆中华民国政权，最终建立苏联式的红色政权。</p>
 <p>事实也确实如此。作为黄埔军校政治部主任，周恩来在广州和北伐期间，利用国民党和苏联给的经费，在发展国民党调查科的同时，开始着手建立更加秘密的共产党特务间谍组织，当时称为中共特科，这个组织发展快速，人数众多，组织严密。</p>
 <p>周恩来掌控的组织主要包括两部分，一部分渗透在国民党之中，另外一部分是军队中的指挥官和政治系统。这也导致了北伐回来的蒋介石，决定“清党”行动。</p>
@@ -50,7 +50,7 @@
 <p>而对执行光照帮使命的共产党人来说，国土只是一个地理概念，国家和主权都是国际主义的绊脚石。相反，在他们眼里，在全世界实现共产主义，建立一个世界性的政府，从而控制全人类，才是他们的目的。这样看来，他们的卖国行为是他们的目的使然，是主动而为。</p>
 <p>根据国语字典的解释，汉奸是为一己的利益而甘心出卖国家的人。作为中共国的第一任总理，周恩来出卖的国土已经远远超出中国历史上的任何一位宰相。从这一点来看，称周恩来为一代奸相，一点也不为过。</p>
 <p>好了，今天的节目就到这儿，我们下次见！</p>
-<p>《<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%e8%96%87%e7%be%bd%e7%9c%8b%e4%b8%96%e9%96%93.md#1">薇羽看世间</a>》节目组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%e8%96%87%e7%be%bd%e7%9c%8b%e4%b8%96%e9%96%93.md#1">薇羽看世间</a>》节目组</p>
 <p>（本视频只代表作者的观点和陈述）</p>
 <p>责任编辑：李昊#</p>
 	
@@ -58,42 +58,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/8/14/n12331597.md#1">【薇羽看世间】不再称一尊 习梦断北戴河？</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/8/15/n12333963.md#1">【薇羽看世间】鲜为人知的毛泽东 中共的杀人史</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/8/16/n12335697.md#1">【薇羽看世间】以阿全面建交 美国剑指中共</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/8/18/n12340992.md#1">【薇羽看世间】北戴河“军权”之争</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/14/n12331597.md#1">【薇羽看世间】不再称一尊 习梦断北戴河？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/15/n12333963.md#1">【薇羽看世间】鲜为人知的毛泽东 中共的杀人史</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/16/n12335697.md#1">【薇羽看世间】以阿全面建交 美国剑指中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/18/n12340992.md#1">【薇羽看世间】北戴河“军权”之争</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10093465.md#1" target="_blank">林辉：江青法庭辩护词透露的真相</a></li><li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/5/n10830342.md#1" target="_blank">走出磨难 费城女医生找到真正的自我</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/29/n10939788.md#1" target="_blank">共产暴政录：湖南道县大屠杀</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/19/n11396317.md#1" target="_blank">国防论坛基金会总裁：法轮功在反迫害最前线</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/8/n12388668.md#1">乱世佳人的守护天使</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/3/n12378183.md#1">书生神游天宫 原来世人多从天上来</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/8/23/n12352129.md#1">到手钱财如水流？古今三故事 道出败财因由</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/6/21/n12202372.md#1">龄官画蔷  从此各人得各人的眼泪</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/8/n12389252.md#1">古中医“五藏六府”与现代“五脏六腑”之别处</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/12/n12399440.md#1">【新闻看点】党内造反！习中央连下狠手</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/12/n12398182.md#1">【西岸观察】9·11临危报警 华裔空姐成美国英雄</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/12/n12398327.md#1">【一线采访视频版】声援许章润 耿潇男失联</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/9/n12392244.md#1">不沾锅别用错 厨房6样东西使用不当小心吃毒</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/8/n12389899.md#1">【独家】三星撤重创惠州 中共密令拉住日韩</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/11/n12395667.md#1">任志强案开庭 大量警察戒备 无人能旁听</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/11/n12397754.md#1">男星上节目睡成一片 邓超偷拍晒照引围观</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/10/n12395386.md#1">黄子韬痛失最强靠山 52岁富豪父亲病逝</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/10/n12395006.md#1">新疆争议发酵？传中共下令禁报《花木兰》</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/10/n12395276.md#1">《权力游戏》女星黛安娜·瑞格癌逝 享年82岁</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/10/n12395450.md#1">吐槽伊能静太唠叨 秦昊获赞有幽默感</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/9/n12392244.md#1">不沾锅别用错 厨房6样东西使用不当小心吃毒</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/11/n12397483.md#1">掉发原因有3种！中医4招防掉发 长回浓密黑发</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/12/n12398512.md#1">胡锡进炫耀共军以无人机送餐 印度网民调侃</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/11/n12396262.md#1">NBA收视率跌4成 向中共靠拢是原因之一</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/13/n12400181.md#1">川普所说中俄都不知道的核武 可能是指这个</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gmcdso3109/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gmcdso3109/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/13/n12401109.htm">【薇羽看世间】一代奸相周恩来（上）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/13/n12401109.htm">【薇羽看世间】一代奸相周恩来（上）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/gmcdso3109/djy/blob/master/gb/20/9/13/n12401109.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gmcdso3109/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gmcdso3109/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gmcdso3109/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/9/13/n12401109.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
